--- a/scholarship-project/scholarship_page.html
+++ b/scholarship-project/scholarship_page.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="box-text-s">
                         <div class="box-text-s1">
-                            <p> Cambodia Gorverment Digital Scholarship &#124; Fully Funeded &#124; For Cambodia Citizen
+                            <p> Cambodia Gorverment Digital Scholarship &#124; Fully Funded 2023 &#124; For Cambodia Citizen.
                         </div>
                         <div class="box-text-s2">
                             <p> <strong> GoEdu Cambodia </strong> - 18/12/2022 </p>
@@ -79,13 +79,13 @@
                     </div>
                     <div class="box-text-s">
                         <div class="box-text-s1">
-                            <p> Cambodia Gorverment Digital Scholarship &#124; Fully Funeded &#124; For Cambodia Citizen
+                            <p> UK Gorverment Scholarsip &#124; Fully Funded 2023&#124; For International Students.
                         </div>
                         <div class="box-text-s2">
-                            <p> <strong> GoEdu Cambodia </strong> - 18/12/2022 </p>
+                            <p> <strong> GoEdu Cambodia </strong> - 20/12/2022 </p>
                         </div>
                         <div class="box-text-s3">
-                            <p> In order to speed Cambodia Developement to Industry 4.0, Cambodia Goverment offer digital scholarship to teenagers so as to encourage them to study IT major .... </p>
+                            <p> As the country that has many old famous university, UK goverments are open-minded to have internation students to study in Oxford, .... </p>
                         </div>
                         <div class="box-text-s4">
                             <button> Read More</button>
@@ -98,13 +98,13 @@
                     </div>
                     <div class="box-text-s">
                         <div class="box-text-s1">
-                            <p> Cambodia Gorverment Digital Scholarship &#124; Fully Funeded &#124; For Cambodia Citizen
+                            <p> Japan Goverment Scholarsip &#124; Fully Funded 2023 &#124; For International Students.
                         </div>
                         <div class="box-text-s2">
-                            <p> <strong> GoEdu Cambodia </strong> - 18/12/2022 </p>
+                            <p> <strong> GoEdu Cambodia </strong> - 18/11/2022 </p>
                         </div>
                         <div class="box-text-s3">
-                            <p> In order to speed Cambodia Developement to Industry 4.0, Cambodia Goverment offer digital scholarship to teenagers so as to encourage them to study IT major .... </p>
+                            <p> Japan Goverment is deligtful to have the present of study arround the world, to come experience their educationting system, culture .......
                         </div>
                         <div class="box-text-s4">
                             <button> Read More</button>
@@ -117,13 +117,13 @@
                     </div>
                     <div class="box-text-s">
                         <div class="box-text-s1">
-                            <p> Cambodia Gorverment Digital Scholarship &#124; Fully Funeded &#124; For Cambodia Citizen
+                            <p> Korea Gorvernment Scholarship, South-Korea not North-Korea &#124; Fully Funded 2023 &#124; For International Students.
                         </div>
                         <div class="box-text-s2">
-                            <p> <strong> GoEdu Cambodia </strong> - 18/12/2022 </p>
+                            <p> <strong> GoEdu Cambodia </strong> - 10/12/2022 </p>
                         </div>
                         <div class="box-text-s3">
-                            <p> In order to speed Cambodia Developement to Industry 4.0, Cambodia Goverment offer digital scholarship to teenagers so as to encourage them to study IT major .... </p>
+                            <p> South-Korea is being well-known of their quality of education, the fast-growth economic, culture, K-pops. And now South-Korea Gorvernment ...... </p>
                         </div>
                         <div class="box-text-s4">
                             <button> Read More</button>
@@ -132,17 +132,17 @@
                 </div>
                 <div class="box-s">
                     <div class="box-img-s">
-                        <img class="box-img-pic-s" src="image/MEXT.png">
+                        <img class="box-img-pic-s" src="image/techno-cover1.jpg">
                     </div>
                     <div class="box-text-s">
                         <div class="box-text-s1">
-                            <p> Cambodia Gorverment Digital Scholarship &#124; Fully Funeded &#124; For Cambodia Citizen
+                            <p> Cambodia ITC Scholarship &#124; Fully Funeded &#124; For Cambodia Citizen.
                         </div>
                         <div class="box-text-s2">
-                            <p> <strong> GoEdu Cambodia </strong> - 18/12/2022 </p>
+                            <p> <strong> GoEdu Cambodia </strong> - 25/12/2022 </p>
                         </div>
                         <div class="box-text-s3">
-                            <p> In order to speed Cambodia Developement to Industry 4.0, Cambodia Goverment offer digital scholarship to teenagers so as to encourage them to study IT major .... </p>
+                            <p> ITC is famous of being one of the oldest school in Cambodia and the guranted quality of education system. Now, ITC has open the application for applying .... </p>
                         </div>
                         <div class="box-text-s4">
                             <button> Read More</button>
