--- a/scholarship-project/scholarship_page.html
+++ b/scholarship-project/scholarship_page.html
@@ -41,11 +41,11 @@
                 </script>
                 
                 <div class="user">
-                    <div class="button1">
-                        <button class="login"> <a href="Login_index.html"> Log in </a>  </button>
+                    <div class="part1">
+                       <button class="notify"><i class="fa-solid fa-bell fa-2x"></i></button>
                     </div>
-                    <div class="button2">
-                        <button class="signup"> <a href="Signup_index.html"> Sign up </a> </button>
+                    <div class="part2">
+                        <button class="user-pf"> <i class="fa-solid fa-user fa-2x"></i> </button>
                     </div>
                 </div>
             
