--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -56,10 +56,10 @@
         <div class="search_school">
             <!-- <i class='bx bxs-search-alt-2 bx-sm'></i> -->
             <input type="text" placeholder="Search school name...">
-        </div>
+        </div><br>
         <div class="public_uni">
             <h>Public University</h>
-        </div>
+        </div><br>
         
         <div class="uni_category">
             <div class="uni_box">
@@ -114,7 +114,8 @@
             <div class="uni_box">
                 <div class="inside-unibox"><a href="rule_uni.html">
                     <img src="image/rule-uni1.jpg">
-                    <p>Find Free education in cambodia</p>
+                    <p>
+                        Royal University of Law and Economics</p>
                 </a>
                 </div>
             </div>
@@ -138,11 +139,11 @@
                     <p>Phnom Penh Institute of Technology</p>
                 </a>
                 </div>
-            </div>
+            </div><br>
 
         <div class="private_uni">
             <h>Private University</h>
-        </div>
+        </div><br>
 
         <div class="uni_box">
             <div class="inside-unibox"><a>
@@ -154,19 +155,19 @@
             <div class="uni_box">
                 <div class="inside-unibox">
                     <img src="image/camtech-uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                    <p>CamTech University</p>
                 </div>
             </div>
             <div class="uni_box">
                 <div class="inside-unibox">
                     <img src="image/camed-unni.jpg">
-                    <p>Find Free education in cambodia</p>
+                    <p>CamEd Business School</p>
                 </div>
             </div>
             <div class="uni_box">
                 <div class="inside-unibox">
                     <img src="image/beltie-uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                    <p>BELTEI International University</p>
                 </div>
             </div>
             
