--- a/scholarship-project/cadt_uni.html
+++ b/scholarship-project/cadt_uni.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goedu Cambodia</title>
-    <link rel="stylesheet" href="style.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Goedu Cambodia</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/bf60116f16.js" crossorigin="anonymous"></script><link rel="preconnect" href="https://fonts.googleapis.com"> <!--Using URL to import icon link into html. -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
@@ -24,14 +25,31 @@
                 </ul>
             </div>
             <div class="register">
-                <div class="login">
-                    <a href="">Login</a>
+                <div class="current-time">
+                    <h9 id="time"> </h9>
                 </div>
-                <div class="signup">
-                    <a href="">Sign up</a>
+    
+                <script>
+                    let time= document.getElementById("time");
+                    let d = new Date();
+                    time.innerH0TML = d.toLocaleTimeString();
+                    setInterval(() => {
+                      let d = new Date();
+                      time.innerHTML = d.toLocaleTimeString();
+                    }, 1000)
+                </script>
+                
+                <div class="user">
+                    <div class="part1">
+                       <button class="notify"><i class="fa-solid fa-bell fa-2x"></i></button>
+                    </div>
+                    <div class="part2">
+                        <button class="user-pf"> <i class="fa-solid fa-user fa-2x"></i> </button>
+                    </div>
                 </div>
             </div>
         </div>
+
         <div class="uni_container">
         <div class="cadt_uni_cover">
             <img src="image/idt-building.jpg">
