--- a/scholarship-project/Techo.html
+++ b/scholarship-project/Techo.html
@@ -53,7 +53,7 @@
     <div class="body-box">
         
         <div class="sls-img">
-            <img class="sls-pic" src="image/Chevening.png">
+            <img class="sls-pic" src="image/Techo.png">
         </div>
     
         <div class="sls-text">
