--- a/scholarship-project/index.html
+++ b/scholarship-project/index.html
@@ -23,7 +23,6 @@
                     <li><a href="scholarship_page.html">Scholarship</a></li>
                     <li><a href="university_page.html">University</a></li>
                     <li><a href="major_page.html">Major</a></li>
-                    <li><a href="contactus_page.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="register">
@@ -43,10 +42,10 @@
                 
                 <div class="user">
                     <div class="button1">
-                        <button class="login"> Log in </button>
+                        <button class="login"><a href="Login.html"> Log in</a> </button>
                     </div>
                     <div class="button2">
-                        <button class="signup"> Sign up </button>
+                        <button class="signup"><a href="Signup.html"> Sign up </a> </button>
                     </div>
                 </div>
               
